# advent-of-code

./: Cargo.toml  LICENSE  README.md  deno.json
.github/workflows/: ci.yml
2015/: Cargo.toml
2015/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  10.rs  12.rs  16.rs  17.rs  lib.rs
2016/src/: 01-2.test.ts  01.test.ts
2023/: Cargo.toml
2023/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  lib.rs
src/: 01.rs  02.rs  03.rs  04.rs  day1.rs  day1part2.rs  day2.rs  day2part2.rs  lib.rs
sugar/: Cargo.toml
sugar/src/: lib.rs
